Implementando bottomnavigation na tela home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
 
     <!-- Home -->
     <string name="hintCiao">Ciao,</string>
+    <string name="title_activity_teste">Teste</string>
 </resources>
