--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,13 @@
     <!-- Home -->
     <string name="hintCiao">Ciao,</string>
     <string name="title_activity_teste">Teste</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--MenusTitle    -->
+    <string name="menuTitle">Menu</string>
+    <string name="cardapioTitle">Cardápio</string>
+    <string name="contatoTitle">Contato</string>
+    <string name="reservascancelamentosTitle">Reservas e Cancelamentos</string>
+    <string name="cardapiomassasTitle">Cardápio/Massas</string>
+    <string name="consultarreservasTitle">Consultar Reservas</string>
+
 </resources>
