Ajustando campo telefone da tela de cadastro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
 
     <!--MenusTitle    -->
     <string name="menuTitle">Menu</string>
+    <string name="reservarTitle">Reservar</string>
+    <string name="cancelarreservarTitle">Cancelar reserva</string>
     <string name="cardapioTitle">Cardápio</string>
     <string name="contatoTitle">Contato</string>
     <string name="reservascancelamentosTitle">Reservas e Cancelamentos</string>
