Ajustando setinha da tela de menu, implementando tela perfil com opção para deslogar, e ajustando navegação dentro dos cardapio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,9 +23,13 @@
     <string name="hintCiao">Ciao,</string>
     <string name="title_activity_teste">Teste</string>
 
+    <!--Perfil-->
+    <string name="btnDesconectar">Desconectar</string>
+
     <!--MenusTitle-->
     <string name="menuTitle">Menu</string>
     <string name="reservarTitle">Reservar</string>
+    <string name="perfilTitle">Perfil</string>
     <string name="cancelarreservarTitle">Cancelar reserva</string>
     <string name="cardapioTitle">Cardápio</string>
     <string name="contatoTitle">Contato</string>
