--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,15 @@
     <string name="Bebidas">Bebidas</string>
     <string name="Vinhos">Vinhos</string>
     <string name="Cervejas">Cervejas</string>
+
+    <!--Reservas-->
+    <string name="msgReservar">Cião! Digite as informações abaixo \n para realizar sua reserva</string>
+
+    <!--Spinner-->
+    <string-array name="Spinner_Itens">
+        <item>Sim</item>
+        <item>Não</item>
+    </string-array>
+
+
 </resources>
